force-app/main/default/objects/DA_AMLCTF_Audit_Action__b/DA_AMLCTF_Audit_Action__b.object-meta.xml
<CustomObject>
    <label>DA Audit Action</label>
    <pluralLabel>DA Audit Action</pluralLabel>
</CustomObject>