force-app/main/default/objects/DA_AMLCTF_Audit_Action__b/fields/AMLCTF_Audit_Action_Statement__c.field-meta.xml
<CustomField>
    <fullName>AMLCTF_Audit_Action_Statement__c</fullName>
    <label>Audit Action Statement</label>
    <referenceTo>AMLCTF_Audit_Action_Statement__c</referenceTo>
    <relationshipName>AMLCTF_Audit_Action_Stateme1564404348852</relationshipName>
    <type>Lookup</type>
</CustomField>