force-app/main/default/objects/DA_AMLCTF_Audit_Action__b/fields/AMLCTF_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>AMLCTF_Item_Number__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>