force-app/main/default/objects/DA_AMLCTF_Audit_Action__b/fields/AMLCTF_Print__c.field-meta.xml
<CustomField>
    <fullName>AMLCTF_Print__c</fullName>
    <label>Print?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>